src/objects/Assesments__c.object
<CustomObject>
    <fields>
        <fullName>API_CPU__c</fullName>
        <label>API CPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>API_NU__c</fullName>
        <label>API NU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AWS_DWH_Region__c</fullName>
        <inlineHelpText>In what AWS region does the customer have a data warehouse?</inlineHelpText>
        <label>AWS DWH Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS GovCloud</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Frankfurt</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Northern California</fullName>
                </value>
                <value>
                    <fullName>Northern Virginia</fullName>
                </value>
                <value>
                    <fullName>Oregon</fullName>
                </value>
                <value>
                    <fullName>Sao Paulo</fullName>
                </value>
                <value>
                    <fullName>Seoul</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AWS_DWH__c</fullName>
        <inlineHelpText>Does the customer have a data warehouse in an AWS region?</inlineHelpText>
        <label>AWS DWH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Act__c</fullName>
        <formula>Opportunity__r.Act__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <formula>IF( 
CONTAINS(Edit_Link__c,&quot;sgtarget=2&quot;), 
HYPERLINK( 
Edit_Link__c &amp; &quot;&amp;sfassessmentid=&quot; &amp; Id &amp; &quot;&amp;sfuserid=&quot; &amp; $User.Id , 
&quot;View Assessment&quot;, 
&quot;_Parent&quot;), 
HYPERLINK( 
Edit_Link__c &amp; &quot;&amp;sfassessmentid=&quot; &amp; Id &amp; &quot;&amp;sfuserid=&quot; &amp; $User.Id , 
&quot;Edit Assessment&quot;, 
&quot;_Parent&quot;))</formula>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrator_Students__c</fullName>
        <label>Administrator Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advisory_Solution_Engagements__c</fullName>
        <label>Advisory Solution Engagements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Service Starter Program</fullName>
                </value>
                <value>
                    <fullName>Application Blueprint Workshop</fullName>
                </value>
                <value>
                    <fullName>Mobile Roadmap</fullName>
                </value>
                <value>
                    <fullName>Upgrade Oversight and Support</fullName>
                </value>
                <value>
                    <fullName>Expert Advisory and Audit Services</fullName>
                </value>
                <value>
                    <fullName>Administration and Governance</fullName>
                </value>
                <value>
                    <fullName>Advisory Services: Mobile Information App Development</fullName>
                </value>
                <value>
                    <fullName>Analytics SDK Customization</fullName>
                </value>
                <value>
                    <fullName>Advanced Analytics</fullName>
                </value>
                <value>
                    <fullName>Integration with Big Data Sources (Hadoop)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analyst_Students__c</fullName>
        <label>Analyst Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analytics_CPU__c</fullName>
        <label>Analytics CPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analytics_NU__c</fullName>
        <label>Analytics NU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_On_Premise_Mx_Fees__c</fullName>
        <inlineHelpText>What is the current annual Maintenance spend for all on-premise perpetual licenses?</inlineHelpText>
        <label>Annual On-Premise Mx Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Architect_CPU__c</fullName>
        <label>Architect CPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Architect_Developers__c</fullName>
        <label>Architect Developers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Architect_NU__c</fullName>
        <label>Architect NU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Architect__c</fullName>
        <label># Architect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_Parent&quot;)</formula>
        <label>Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Nodes_Size__c</fullName>
        <inlineHelpText>What is the recommended additional BI node(s) size (RAM)?</inlineHelpText>
        <label>BI Nodes Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15giB</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>244</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BI_Nodes__c</fullName>
        <inlineHelpText>Does the customer require any additional BI nodes?</inlineHelpText>
        <label>BI Nodes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Badge_CPU__c</fullName>
        <label>Badge CPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Badge_NU__c</fullName>
        <label>Badge NU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Banking_Apps_Detail__c</fullName>
        <label>Banking Apps Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Banking_Apps__c</fullName>
        <label>Banking Apps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting and Finance Placeholder</fullName>
                </value>
                <value>
                    <fullName>Accounting and Finance</fullName>
                </value>
                <value>
                    <fullName>Asset Management and Servicing</fullName>
                </value>
                <value>
                    <fullName>Retail Banking</fullName>
                </value>
                <value>
                    <fullName>Commercial and Business Banking</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Treasury and Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Compliance and Audit</fullName>
                </value>
                <value>
                    <fullName>Customer Relationship Management</fullName>
                </value>
                <value>
                    <fullName>Digital Banking Card</fullName>
                </value>
                <value>
                    <fullName>Secure Access with Digital Badge</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Big_Data_CPU__c</fullName>
        <label>Big Data CPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Big_Data_NU__c</fullName>
        <label>Big Data NU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biotech_Pharma_Apps_Detail__c</fullName>
        <label>Biotech &amp; Pharma Apps Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_User_Students__c</fullName>
        <label>Business User Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Challengers__c</fullName>
        <label>Challengers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tableau</fullName>
                </value>
                <value>
                    <fullName>DOMO</fullName>
                </value>
                <value>
                    <fullName>Microsoft Power BI</fullName>
                </value>
                <value>
                    <fullName>Qlik</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>IBM Cognos</fullName>
                </value>
                <value>
                    <fullName>Oracle OBIEE</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>Salesforce Wave</fullName>
                </value>
                <value>
                    <fullName>Tibco</fullName>
                </value>
                <value>
                    <fullName>Birst</fullName>
                </value>
                <value>
                    <fullName>Pentaho</fullName>
                </value>
                <value>
                    <fullName>Pyramid Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <inlineHelpText>On which client(s) is the customer planning to deploy?</inlineHelpText>
        <label>Clients</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>(001.000) PC - Windows</fullName>
                </value>
                <value>
                    <fullName>(002.000) PC - Mac</fullName>
                </value>
                <value>
                    <fullName>(004.000) M - iOS</fullName>
                </value>
                <value>
                    <fullName>(005.000) M - Android</fullName>
                </value>
                <value>
                    <fullName>(006.000) M - Windows</fullName>
                </value>
                <value>
                    <fullName>(007.000) Web</fullName>
                </value>
                <value>
                    <fullName>(008.000) Office</fullName>
                </value>
                <value>
                    <fullName>(009.000) Client SDK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Budget_Amt__c</fullName>
        <inlineHelpText>What is the budget for this project?</inlineHelpText>
        <label>Cloud Budget</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Budget__c</fullName>
        <inlineHelpText>Does the customer have a budget for this project?</inlineHelpText>
        <label>Cloud Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Competition_Notes__c</fullName>
        <inlineHelpText>If the customer is evaluating MicroStrategy competitors or considering an on-premise solution, please describe.</inlineHelpText>
        <label>Cloud Competition Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloud_Competitors__c</fullName>
        <inlineHelpText>Is the customer evaluating MicroStrategy competitors or considering an on-premise solution?</inlineHelpText>
        <label>Cloud Competition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Solution_Engagements__c</fullName>
        <label>Cloud Solution Engagements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Migration and Administration</fullName>
                </value>
                <value>
                    <fullName>ETL Setup, Development, and Administration</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse Setup</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse Support</fullName>
                </value>
                <value>
                    <fullName>Network/Connectivity Setup and Support (VPN/VPC)</fullName>
                </value>
                <value>
                    <fullName>SS0/LDAP Setup and Configuration</fullName>
                </value>
                <value>
                    <fullName>Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Migration Service</fullName>
                </value>
                <value>
                    <fullName>Annual Health Check</fullName>
                </value>
                <value>
                    <fullName>Technical Account Manager</fullName>
                </value>
                <value>
                    <fullName>Assigned Support Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud__c</fullName>
        <label>Cloud</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collaboration_CPU__c</fullName>
        <label>Collaboration CPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collaboration_NU__c</fullName>
        <label>Collaboration NU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Birst</fullName>
                </value>
                <value>
                    <fullName>DOMO</fullName>
                </value>
                <value>
                    <fullName>IBM Cognos</fullName>
                </value>
                <value>
                    <fullName>Microsoft Power BI</fullName>
                </value>
                <value>
                    <fullName>Oracle OBIEE</fullName>
                </value>
                <value>
                    <fullName>Pentaho</fullName>
                </value>
                <value>
                    <fullName>Pyramid Analytics</fullName>
                </value>
                <value>
                    <fullName>Qlik</fullName>
                </value>
                <value>
                    <fullName>Salesforce Wave</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
                <value>
                    <fullName>Tibco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Frameworks__c</fullName>
        <label>Compliance Frameworks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOC2 Type II</fullName>
                </value>
                <value>
                    <fullName>PCI</fullName>
                </value>
                <value>
                    <fullName>HIPAA</fullName>
                </value>
                <value>
                    <fullName>Safe Harbor</fullName>
                </value>
                <value>
                    <fullName>ISO 27001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <inlineHelpText>What is the requested or proposed contract term length (in months)?</inlineHelpText>
        <label>Contract Length</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractual_Discount__c</fullName>
        <inlineHelpText>Does the customer have a contractual discount?</inlineHelpText>
        <label>Contractual Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Cubes_GB__c</fullName>
        <inlineHelpText>What is the approximate size in GB of all concurrently loaded cubes within the customer&apos;s environment?</inlineHelpText>
        <label>Current Cubes (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Version__c</fullName>
        <inlineHelpText>What is the customer&apos;s current MicroStrategy software version?</inlineHelpText>
        <label>Current Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum__c</fullName>
        <label>Curriculum</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App Creation/Maintenance</fullName>
                </value>
                <value>
                    <fullName>Advanced Analytics</fullName>
                </value>
                <value>
                    <fullName>System Performance/Stability</fullName>
                </value>
                <value>
                    <fullName>Enterprise Security Model Design</fullName>
                </value>
                <value>
                    <fullName>Application Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Web to Mobile App Conversion</fullName>
                </value>
                <value>
                    <fullName>Secure Cloud Migration</fullName>
                </value>
                <value>
                    <fullName>Custom Web Applications</fullName>
                </value>
                <value>
                    <fullName>Custom Mobile Applications</fullName>
                </value>
                <value>
                    <fullName>Enterprise Reports</fullName>
                </value>
                <value>
                    <fullName>Enterprise Gateways</fullName>
                </value>
                <value>
                    <fullName>Database Optimization</fullName>
                </value>
                <value>
                    <fullName>Big Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Report Creation</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Web Dashboards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Support_Apps_Detail__c</fullName>
        <label>Customer Support Apps Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Support_Apps__c</fullName>
        <label>Customer Support Apps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer 360 Analysis</fullName>
                </value>
                <value>
                    <fullName>Closed Case Inspection</fullName>
                </value>
                <value>
                    <fullName>Call Center Analytics</fullName>
                </value>
                <value>
                    <fullName>Customer Sentiment Analysis</fullName>
                </value>
                <value>
                    <fullName>Customer Service Workbench</fullName>
                </value>
                <value>
                    <fullName>Service Team Performance</fullName>
                </value>
                <value>
                    <fullName>Field Agent Automation</fullName>
                </value>
                <value>
                    <fullName>Customer Self Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DWH_Connection_Method__c</fullName>
        <inlineHelpText>What is the data warehouse connection method?</inlineHelpText>
        <label>DWH Connection Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VPN</fullName>
                </value>
                <value>
                    <fullName>VPC Peering</fullName>
                </value>
                <value>
                    <fullName>AWS Direct Connect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Warehouse__c</fullName>
        <inlineHelpText>Does the customer require a hosted data warehouse?</inlineHelpText>
        <label>DWH Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No data warehouse hosting required</fullName>
                </value>
                <value>
                    <fullName>SQL Server Standard</fullName>
                </value>
                <value>
                    <fullName>SQL Server Enterprise</fullName>
                </value>
                <value>
                    <fullName>MySQL</fullName>
                </value>
                <value>
                    <fullName>Redshift</fullName>
                </value>
                <value>
                    <fullName>Snowflake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desktop_Developers__c</fullName>
        <label>Desktop Developers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desktop__c</fullName>
        <label># Desktop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developer_Students__c</fullName>
        <label>Developer Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Contract_Number__c</fullName>
        <label>Discount Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_CPU__c</fullName>
        <label>Distribution CPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_NU__c</fullName>
        <label>Distribution NU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMM_CPU__c</fullName>
        <label>EMM CPU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMM_NU__c</fullName>
        <label>EMM NU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETL_Connector_Types__c</fullName>
        <inlineHelpText>If ETL connectors are required, please indicate the type and quantity of ETL connectors.</inlineHelpText>
        <label>ETL Connector Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETL_Connectors_Requirement__c</fullName>
        <inlineHelpText>Are ETL connectors required?</inlineHelpText>
        <label>ETL Connectors Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETL_Level__c</fullName>
        <inlineHelpText>Select an ETL option.</inlineHelpText>
        <label>ETL Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No ETL Required</fullName>
                </value>
                <value>
                    <fullName>Informatica Cloud Basic</fullName>
                </value>
                <value>
                    <fullName>Informatica Cloud Advanced</fullName>
                </value>
                <value>
                    <fullName>Informatica PowerCenter Standard</fullName>
                </value>
                <value>
                    <fullName>Informatica PowerCenter Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <label>Education Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enterprise_Assets__c</fullName>
        <label>Enterprise Assets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(100.000) RDBMS</fullName>
                </value>
                <value>
                    <fullName>(101.000) OLAP</fullName>
                </value>
                <value>
                    <fullName>(102.000) Big Data</fullName>
                </value>
                <value>
                    <fullName>(103.000) Local Data</fullName>
                </value>
                <value>
                    <fullName>(104.000) Cloud Data</fullName>
                </value>
                <value>
                    <fullName>(105.000) Enterprise BI</fullName>
                </value>
                <value>
                    <fullName>(106.000) Remote Data</fullName>
                </value>
                <value>
                    <fullName>(107.000) ETL / DS</fullName>
                </value>
                <value>
                    <fullName>(108.000) Statistical</fullName>
                </value>
                <value>
                    <fullName>(109.000) Directory</fullName>
                </value>
                <value>
                    <fullName>(110.000) Network</fullName>
                </value>
                <value>
                    <fullName>(111.000) EMM</fullName>
                </value>
                <value>
                    <fullName>(112.000) Server</fullName>
                </value>
                <value>
                    <fullName>(113.000) Charting</fullName>
                </value>
                <value>
                    <fullName>(114.000) Mapping</fullName>
                </value>
                <value>
                    <fullName>(115.000) Media</fullName>
                </value>
                <value>
                    <fullName>(116.000) PACS</fullName>
                </value>
                <value>
                    <fullName>(117.000) CMS</fullName>
                </value>
                <value>
                    <fullName>(118.000) Enterprise Apps</fullName>
                </value>
                <value>
                    <fullName>(119.000) Cloud Apps</fullName>
                </value>
                <value>
                    <fullName>(120.000) Enterprise Assets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enterprise_Solutions__c</fullName>
        <label>Enterprise Solutions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Cloudera</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Apps_Detail__c</fullName>
        <label>Executive Apps Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>